<resources>
    <string name="app_name">SSHClient</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_label">user</string>
    <string name="host_label">host</string>
    <string name="enter_user_label">Enter user</string>
    <string name="enter_host_label">Enter host</string>
    <string name="enter_password_label">Enter password</string>
    <string name="PASSWORD_PREFERENCE">passwords</string>
    <string name="HOST_PREFERENCE">hosts</string>
    <string name="USER_PREFERENCE">users</string>
    <string name="submit_label">Submit</string>
    <string name="title_activity_auth_list">AuthListActivity</string>
    <string name="back_label">back</string>
    <string name="password_label">password</string>
    <string name="chooseserver_label">chooseServer</string>
    <string name="addlogin_label">addLogin</string>
    <string name="addshortcut_label">addShortcut</string>
    <string name="connect_label">Connect</string>
    <string name="pickserver_label">PickServer</string>
    <string name="settings_label">Settings</string>
</resources>

